tests/error/undefined_name.ca

f = {
    add(a b c)
}.block

int = make_stack()
int.push_frame(f [])
int.run
assert(int.errored)
